[project]
name = "harmony-test-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "nicegui>=3.11.1",
    "psycopg2-binary>=2.9.12",
    "uuid>=1.30",
    "uvicorn[standard]>=0.44.0",
]

